fullOutput.txt

#0 building with "default" instance using docker driver

#1 [internal] load build definition from Dockerfile
#1 transferring dockerfile:
#1 transferring dockerfile: 146B 0.1s done
#1 DONE 0.9s

#2 [internal] load metadata for docker.io/library/gcc:latest
#2 DONE 4.3s

#3 [internal] load .dockerignore
#3 transferring context: 2B done
#3 DONE 0.0s

#4 [1/4] FROM docker.io/library/gcc:latest@sha256:d7a40398ce9109d54019ad665f7d1a96c1a0e31ca7dfaa96979b918662f71338
#4 DONE 0.0s

#5 [internal] load build context
#5 DONE 0.0s

#5 [internal] load build context
#5 transferring context: 877B 0.1s done
#5 DONE 0.3s

#6 [2/4] WORKDIR /usr/src/app
#6 CACHED

#7 [3/4] COPY . .
#7 CACHED

#8 [4/4] RUN gcc -o main 10_b.c
#8 50.28 10_b.c: In function 'main':
#8 50.28 10_b.c:40:26: error: expected ';' before 'printf'
#8 50.28    40 |                 res /= 10
#8 50.28       |                          ^
#8 50.28       |                          ;
#8 50.28    41 |                 printf("Reverse notation of the number: %d\n", (int)res );
#8 50.28       |                 ~~~~~~    
#8 ERROR: process "/bin/sh -c gcc -o main $C_FILE" did not complete successfully: exit code: 1
------
 > [4/4] RUN gcc -o main 10_b.c:
50.28 10_b.c: In function 'main':
50.28 10_b.c:40:26: error: expected ';' before 'printf'
50.28    40 |                 res /= 10
50.28       |                          ^
50.28       |                          ;
50.28    41 |                 printf("Reverse notation of the number: %d\n", (int)res );
50.28       |                 ~~~~~~    
------
Dockerfile:8
--------------------
   6 |     
   7 |     ARG C_FILE
   8 | >>> RUN gcc -o main $C_FILE 
   9 |     
  10 |     CMD ["./main"]
--------------------
ERROR: failed to solve: process "/bin/sh -c gcc -o main $C_FILE" did not complete successfully: exit code: 1

View build details: docker-desktop://dashboard/build/default/default/5116cpeo6pmegce0skkzds3es
/code:10:11: style: The scope of the variable 'status' can be reduced. [variableScope]
 int pid, status;
          ^
/code:40:7: style: Variable 'res' is assigned a value that is never used. [unreadVariable]
  res /= 10
      ^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingIncludeSystem]

